--- a/app/assets/stylesheets/helpers.scss
+++ b/app/assets/stylesheets/helpers.scss
@@ -52,7 +52,7 @@
   margin-left: -100px;
   background: #19B5FE;
 
-  z-index: 105;
+  z-index: 13;
   opacity: 0.88;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -70,7 +70,7 @@
   color: #fff;
   text-align: center;
 
-  z-index: 105;
+  z-index: 13;
   opacity: 0.88;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -188,7 +188,7 @@ body > footer.jumbotron{
 }
 
 .navbar{
-  z-index: 101;
+  z-index: 11;
   hr{
     padding: 3px 0;
     margin: 3px 0;
@@ -218,7 +218,7 @@ body > footer.jumbotron{
 }
 
 .modal{
-  z-index: 103;
+  z-index: 12;
 }
 
 
